--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-storyblok",
+  "name": "next-storyblok-starter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,19 +10,19 @@
     "create-component": "node ./generators/copy.js"
   },
   "dependencies": {
-    "@storyblok/react": "^1.0.5",
-    "axios": "^0.21.1",
-    "next": "^12.1.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "storyblok-rich-text-react-renderer": "^2.5.2"
+    "@storyblok/react": "^1.3.4",
+    "axios": "^1.2.1",
+    "next": "^13.0.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storyblok-rich-text-react-renderer": "^2.6.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "eslint": "^8.13.0",
-    "eslint-config-next": "^12.1.5",
-    "postcss": "^8.4.1",
-    "tailwindcss": "^3"
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.29.0",
+    "eslint-config-next": "^13.0.6",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   },
   "engines": {
     "node": ">=8.0.0"
